--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
         <title></title>
     </head>
     <body>
-         <h1> Programmation de la dotation régionale d'investissement dans la région PACA </h1>
-        <h5> Au 04 Mars 2021 </h5>
-        <img src="https://www.economie.gouv.fr/files/files/directions_services/plan-de-relance/logo-FR-kit-com.png" />
-      
+         <h1> Programmation de la dotation régionale d'investissement dans la région PACA <img src="https://www.economie.gouv.fr/files/files/directions_services/plan-de-relance/logo-FR-kit-com.png" height="50px" width="100px" align=right /> </h1>
+        <h5> Au 04 Mars 2021 </h5>      
         <hr>
         
         <div id="map">
